[metadata]
name = bbbctl
version = 0.0.2
author = Marcel Hellkamp
author_email = marc@gsites.de
description = BigBlueButton API command-line client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/defnull/bbbctl
project_urls =
    Bug Tracker = https://github.com/defnull/bbbctl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
py_modules = bbbctl
python_requires = >=3.6
console_scripts = bbbctl=bbbctl:main

[options.entry_points]
console_scripts =
    bbbctl = bbbctl:main